--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <header>
     <h1>MagicNoThief</h1>
-    <a href="#pages" class="btn">Pages</a>
+    <a href="https://magicnothief.hu/pages" class="btn">Pages</a>
   </header>
 
   <section id="pages">
