--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
       font-size: 0.9rem;
       color: #aaa;
     }
+
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2rem;
+      }
+    }
   </style>
 </head>
 <body>
